added start time to s-expressions

--- a/note_slopes.ipynb
+++ b/note_slopes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -90,28 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C4 G4\n",
-      "G4 Bb5\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "7.5"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def avgmaxslope(exp):\n",
     "    max_asc, max_desc = 0,0\n",
@@ -139,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -175,20 +156,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'F#3'"
-      ]
-     },
-     "execution_count": 164,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#TESTS\n",
     "\n",
@@ -212,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -249,19 +219,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def categorize_note(note, chord, last_chord):\n",
+    "def categorize_note(note, chord, last_chord): #dummy function\n",
     "    return np.random.choice(['C', 'H', 'R'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -271,15 +241,44 @@
     "    # notes is list of tupes of (note_string, duration)\n",
     "    s = ''\n",
     "    notes_only = []\n",
-    "    for note, duration, chord, last_chord in notes:\n",
-    "        s += categorize_note(note, chord, last_chord) + '%.3f '%duration\n",
+    "    for note, start, duration, chord, last_chord in notes:\n",
+    "        s += categorize_note(note, chord, last_chord) + '|%.3f|%.3f '%(duration, start % 1)\n",
     "        notes_only.append(note)\n",
     "    return find_slope_bounds(notes_only) + ' ' + s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def process_song(filename, s_exp):\n",
+    "    measure = 0\n",
+    "    last_chord = None\n",
+    "    curr_s_exp = []\n",
+    "    song = pd.read_csv(directory + filename)\n",
+    "    for i in range(len(song)):\n",
+    "        curr_note = song.iloc[i]\n",
+    "        if measure != int(curr_note['start_time']):\n",
+    "            s = create_s_exp(curr_s_exp)\n",
+    "            row = {'exp': s, 'song_id': song_num, 'song_index': measure}\n",
+    "            s_exp = s_exp.append(row, ignore_index=True)\n",
+    "            curr_s_exp = []\n",
+    "            measure = int(curr_note['start_time'])\n",
+    "        curr_s_exp.append((curr_note['note_name'], curr_note['start_time'], curr_note['duration'], curr_note['chord'], last_chord))\n",
+    "        last_chord = curr_note['chord']\n",
+    "    s = create_s_exp(curr_s_exp)\n",
+    "    row = {'exp': s, 'song_id': song_num, 'song_index': measure}\n",
+    "    s_exp = s_exp.append(row, ignore_index=True)\n",
+    "    return s_exp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -288,42 +287,109 @@
        "1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s_exp = pd.DataFrame(columns=['id', 'exp', 'song_id', 'song_index'])\n",
-    "s_exp = s_exp.set_index(['id'])\n",
+    "s_exp = pd.DataFrame(columns=['id', 'exp', 'song_id', 'song_index']).set_index(['id'])\n",
     "directory = 'midi_to_csv/' # 'raw_solos/'\n",
     "song_num = 0\n",
     "for filename in os.listdir(directory):\n",
-    "    if filename.endswith('Night.csv'):\n",
-    "        measure = 0\n",
-    "        last_chord = None\n",
-    "        curr_s_exp = []\n",
-    "        song = pd.read_csv(directory + filename)\n",
-    "        for i in range(len(song)):\n",
-    "            curr_note = song.iloc[i]\n",
-    "            if measure != int(curr_note['start_time']):\n",
-    "                s = create_s_exp(curr_s_exp)\n",
-    "                row = {'exp': s, 'song_id': song_num, 'song_index': measure}\n",
-    "                s_exp = s_exp.append(row, ignore_index=True)\n",
-    "                curr_s_exp = []\n",
-    "                measure = int(curr_note['start_time'])\n",
-    "            curr_s_exp.append((curr_note['note_name'], curr_note['duration'], None, None))#curr_note['chord'], last_chord))\n",
-    "            #last_chord = curr_note['chord']\n",
-    "        s = create_s_exp(curr_s_exp)\n",
-    "        row = {'exp': s, 'song_id': song_num, 'song_index': measure}\n",
-    "        s_exp = s_exp.append(row, ignore_index=True)\n",
+    "    if filename.endswith('chords.csv'):\n",
+    "        s_exp = process_song(filename, s_exp)\n",
     "        song_num += 1\n",
     "song_num"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>exp</th>\n",
+       "      <th>song_id</th>\n",
+       "      <th>song_index</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0 4 H|0.155|0.125 C|0.725|0.290</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0 0 R|0.340|0.678</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-3 0 H|0.174|0.036 C|0.164|0.255 H|0.195|0.443...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0 0 R|0.243|0.004</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-3 7 C|0.073|0.171 R|0.130|0.263 H|0.185|0.408...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 exp song_id song_index\n",
+       "0                   0 4 H|0.155|0.125 C|0.725|0.290        0          0\n",
+       "1                                 0 0 R|0.340|0.678        0          1\n",
+       "2  -3 0 H|0.174|0.036 C|0.164|0.255 H|0.195|0.443...       0          2\n",
+       "3                                 0 0 R|0.243|0.004        0          3\n",
+       "4  -3 7 C|0.073|0.171 R|0.130|0.263 H|0.185|0.408...       0          4"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s_exp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -349,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
