Worked on grammar function

--- a/grammar_generation.ipynb
+++ b/grammar_generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -81,8 +81,8 @@
     "        octave -= 1\n",
     "    return num_to_note[(new_num) % 12] + str(octave)\n",
     "\n",
-    "#the chord not chord. it is root note. Thanks\n",
-    "def note_dist(noteorchord1, note2, chord=False):\n",
+    "# Chord isn't chord, it is root note \n",
+    "def find_note_dist(noteorchord1, note2, chord=False):\n",
     "    #positive if note2 is above noteorchord1, 0 if same\n",
     "    tot = 0\n",
     "    note2, octave2 = split_note(note2)\n",
@@ -95,27 +95,6 @@
     "        tot += (octave2 - octave1) * 12\n",
     "    tot += note_to_num[note2] - note_to_num[noteorchord1]\n",
     "    return tot\n",
-    "\n",
-    "# modifying this\n",
-    "def note_categorize(note, chord, nextchord):\n",
-    "    split_n = split_note(note)[0]\n",
-    "    if split_n == \"R\":\n",
-    "        return R\n",
-    "    if chord == nextchord:\n",
-    "        if split_n in chord['chord']:\n",
-    "            return C\n",
-    "        elif split_n in chord['color']:\n",
-    "            return L\n",
-    "        else:\n",
-    "            return X\n",
-    "    #check split_n[0] and see if it exists in its corresponding chord. \n",
-    "    else:\n",
-    "        if split_n in chord['chord']:\n",
-    "            return C\n",
-    "        elif split_n in chord['color']:\n",
-    "            return L\n",
-    "        else:\n",
-    "            return A\n",
     "        \n",
     "def find_chord_type(chord):\n",
     "    if \"m7b5\" in chord:\n",
@@ -132,16 +111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def note_category(note, chord, nextchord):\n",
+    "def get_note_category(note, chord, nextchord):\n",
     "    root = chord[0]\n",
     "    chord_type = find_chord_type(chord)\n",
-    "    dist = note_dist(root, note, True)\n",
+    "    dist = find_note_dist(root, note, True)\n",
     "    print(dist)\n",
     "    for chord_type, interval_list in chord_dictionary[chord_type].items():\n",
     "        if dist in interval_list:\n",
@@ -150,12 +129,23 @@
     "        return \"X\"\n",
     "    else:\n",
     "        return \"A\"\n",
+    "\n",
+    "def get_notes_from_category(chord, category): \n",
+    "    possible_notes = []\n",
+    "    root = chord[0] + '4'\n",
+    "    #print(root)\n",
+    "    chord_type = find_chord_type(chord)\n",
+    "    intervals = chord_dictionary[chord_type][category]\n",
+    "    for i in intervals: \n",
+    "        possible_notes.append(shift_note(root, i)[:-1])\n",
+    "    return possible_notes\n",
+    "     \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -163,24 +153,27 @@
      "output_type": "stream",
      "text": [
       "2\n",
-      "L\n"
+      "L\n",
+      "G4\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['G', 'Bb', 'Db', 'F']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#note_dist(\"C\", \"Eb5\", True)\n",
     "#note_category(\"C7\", \"Am7b5\", \"Am7b5\")\n",
-    "print(note_category(\"D3\", \"C\", \"C\"))"
+    "print(get_note_category(\"D3\", \"C\", \"C\"))\n",
+    "get_notes_from_category('Gm7b5', 'C')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
