--- a/note_slopes.ipynb
+++ b/note_slopes.ipynb
@@ -85,29 +85,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Average Max Slope"
+    "### Average Max Slope and Order of Contour"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def avgmaxslope(exp):\n",
-    "    max_asc, max_desc = 0,0\n",
-    "    for i in range(len(exp) - 1):\n",
-    "        print(exp[i][0], exp[i+1][0])\n",
-    "        if note_dist(exp[i][0], exp[i+1][0]) >= 0:\n",
-    "            max_asc = max(max_asc, note_dist(exp[i][0], exp[i+1][0]))\n",
-    "        if note_dist(exp[i][0], exp[i+1][0]) <= 0:\n",
-    "            max_desc = max(max_desc, abs(note_dist(exp[i][0], exp[i+1][0])))\n",
-    "    avg = (max_asc + max_desc) / 2\n",
-    "    return avg\n",
+    "def slope_process(notes):\n",
+    "    slopes = []\n",
+    "    ascending = True\n",
+    "    curr_max = 0\n",
+    "    last_note = notes[0][0]\n",
+    "    direction_changes = 0\n",
+    "    for term in notes[1:]:\n",
+    "        note = term[0]\n",
+    "        dist = note_dist(last_note, note)\n",
+    "        if dist > 0:\n",
+    "            if ascending:\n",
+    "                curr_max = max(curr_max, dist)\n",
+    "            else:\n",
+    "                ascending = True\n",
+    "                slopes.append(curr_max)\n",
+    "                curr_max = dist\n",
+    "                direction_changes += 1\n",
+    "        if dist < 0:\n",
+    "            if not ascending:\n",
+    "                curr_max = max(curr_max, -dist)\n",
+    "            else:\n",
+    "                ascending = False\n",
+    "                slopes.append(curr_max)\n",
+    "                curr_max = -dist\n",
+    "                direction_changes += 1\n",
+    "        last_note = note\n",
+    "    slopes.append(curr_max)\n",
+    "    return np.mean(slopes), direction_changes\n",
     "\n",
-    "#test = [('C4', 0.5), ('G4', 0.25), ('Bb5', 0.4)]\n",
-    "#note_dist('C4', 'G4')\n",
-    "#avgmaxslope(test)\n",
+    "avg_max_slope = lambda notes: slope_process(notes)[0]\n",
+    "order_contour = lambda notes: slope_process(notes)[1]\n",
+    "\n",
+    "# test = [('D4', 0.5), ('G4', 0.25), ('Bb3', 0.4)]\n",
+    "# avg_max_slope(test)\n",
     "\n"
    ]
   },
@@ -182,32 +202,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def consonance(s_exp):\n",
+    "    total = 0.0\n",
+    "    measure = s_exp.split(' ')[2:-1]\n",
+    "    \n",
+    "    weights = {'R': 0.1, 'C': 0.8, 'L': 0.4, 'X': 0.1, 'A': 0.6, 'H': 0.6}\n",
+    "    for term in measure:\n",
+    "        note_info = term.split('|')\n",
+    "        note = note_info[0]\n",
+    "        duration = note_info[2]\n",
+    "        if note in weights:\n",
+    "            total += weights[note] * float(duration)\n",
+    "    return total #total consonance value for that measure\n",
+    "\n",
+    "# test = '0 4 C|0.155|0.125 H|0.725|0.290'\n",
+    "# print(consonance(test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Location of First Note"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def consonance(measure): #measure is 1 measure of an s-expression\n",
-    "    total = 0.0\n",
-    "    i = 0\n",
-    "    for note in measure:\n",
-    "        if note[0][0] == \"R\":\n",
-    "            total += (0.1 * 1/float(note[0][1])) #note[0][1] is duration\n",
-    "        if note[0][0] == \"C\":\n",
-    "            total += (0.8 * 1/float(note[0][1]))\n",
-    "        if note[0][0] == \"L\":\n",
-    "            total += (0.4 * 1/float(note[0][1]))\n",
-    "        if note[0][0] == \"X\":\n",
-    "            total += (0.1 * 1/float(note[0][1]))\n",
-    "        if note[0][0] == \"A\":\n",
-    "            total += (0.6 * 1/float(note[0][1]))\n",
-    "        i += 1\n",
-    "    return total #total consonance value for that measure\n",
-    "\n",
-    "#test = [('C8', 0.5), ('C8', 0.9), ('C8', 0.9)]\n",
-    "#print(consonance(test)\n",
-    "\n"
+    "loc_first = lambda notes: notes[0][1] % 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Total Duration of Rests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tot_rests = lambda notes: 1 - sum([note[1] for note in notes])"
    ]
   },
   {
@@ -219,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -231,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -249,13 +298,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def process_song(filename, s_exp):\n",
+    "def featurize(args):\n",
+    "    dummy = lambda x: 0\n",
+    "    feature_funcs = [len, loc_first, tot_rests, avg_max_slope, order_contour, consonance]\n",
+    "    arg_num = [0, 0, 0, 0, 0, 1]\n",
+    "    assert len(feature_funcs) == num_features, \"Incorrect number of features\"\n",
+    "    features = {}\n",
+    "    for i, func in enumerate(feature_funcs):\n",
+    "        features[str(i)] = func(args[arg_num[i]])\n",
+    "    return features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def process_song(filename, s_exp, features):\n",
     "    measure = 0\n",
     "    last_chord = None\n",
     "    curr_s_exp = []\n",
@@ -264,21 +332,26 @@
     "        curr_note = song.iloc[i]\n",
     "        if measure != int(curr_note['start_time']):\n",
     "            s = create_s_exp(curr_s_exp)\n",
-    "            row = {'exp': s, 'song_id': song_num, 'song_index': measure}\n",
-    "            s_exp = s_exp.append(row, ignore_index=True)\n",
+    "            row_s = {'exp': s, 'song_id': song_num, 'song_index': measure}\n",
+    "            s_exp = s_exp.append(row_s, ignore_index=True)\n",
+    "            row_f = featurize([curr_s_exp, s])\n",
+    "            features = features.append(row_f, ignore_index=True)\n",
     "            curr_s_exp = []\n",
     "            measure = int(curr_note['start_time'])\n",
     "        curr_s_exp.append((curr_note['note_name'], curr_note['start_time'], curr_note['duration'], curr_note['chord'], last_chord))\n",
     "        last_chord = curr_note['chord']\n",
+    "    #tail of loop\n",
     "    s = create_s_exp(curr_s_exp)\n",
-    "    row = {'exp': s, 'song_id': song_num, 'song_index': measure}\n",
-    "    s_exp = s_exp.append(row, ignore_index=True)\n",
-    "    return s_exp"
+    "    row_s = {'exp': s, 'song_id': song_num, 'song_index': measure}\n",
+    "    s_exp = s_exp.append(row_s, ignore_index=True)\n",
+    "    row_f = featurize([curr_s_exp, s])\n",
+    "    features = features.append(row_f, ignore_index=True)\n",
+    "    return s_exp, features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -287,25 +360,28 @@
        "1"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s_exp = pd.DataFrame(columns=['id', 'exp', 'song_id', 'song_index']).set_index(['id'])\n",
+    "num_features = 6\n",
+    "\n",
+    "s_exp = pd.DataFrame(columns=['exp', 'song_id', 'song_index'])\n",
+    "features = pd.DataFrame(columns=[str(i) for i in range(num_features)])\n",
     "directory = 'midi_to_csv/' # 'raw_solos/'\n",
     "song_num = 0\n",
     "for filename in os.listdir(directory):\n",
     "    if filename.endswith('chords.csv'):\n",
-    "        s_exp = process_song(filename, s_exp)\n",
+    "        s_exp, features = process_song(filename, s_exp, features)\n",
     "        song_num += 1\n",
     "song_num"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -329,67 +405,94 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>exp</th>\n",
-       "      <th>song_id</th>\n",
-       "      <th>song_index</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0 4 H|0.155|0.125 C|0.725|0.290</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.125000</td>\n",
+       "      <td>0.584635</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0415</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0 0 R|0.340|0.678</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.678385</td>\n",
+       "      <td>-0.678385</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.4068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-3 0 H|0.174|0.036 C|0.164|0.255 H|0.195|0.443...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.036458</td>\n",
+       "      <td>-11.315104</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.5536</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0 0 R|0.243|0.004</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.003906</td>\n",
+       "      <td>-2.003906</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0004</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-3 7 C|0.073|0.171 R|0.130|0.263 H|0.185|0.408...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.170573</td>\n",
+       "      <td>-31.157552</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.5620</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 exp song_id song_index\n",
-       "0                   0 4 H|0.155|0.125 C|0.725|0.290        0          0\n",
-       "1                                 0 0 R|0.340|0.678        0          1\n",
-       "2  -3 0 H|0.174|0.036 C|0.164|0.255 H|0.195|0.443...       0          2\n",
-       "3                                 0 0 R|0.243|0.004        0          3\n",
-       "4  -3 7 C|0.073|0.171 R|0.130|0.263 H|0.185|0.408...       0          4"
+       "     0         1          2    3    4       5\n",
+       "0  2.0  0.125000   0.584635  4.0  0.0  0.0415\n",
+       "1  1.0  0.678385  -0.678385  0.0  0.0  0.4068\n",
+       "2  5.0  0.036458 -11.315104  1.5  1.0  1.5536\n",
+       "3  1.0  0.003906  -2.003906  0.0  0.0  0.0004\n",
+       "4  7.0  0.170573 -31.157552  4.0  2.0  1.5620"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "features.to_csv('test_files/s_exp_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "s_exp.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
