finished produce_notes function

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -2,8 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -16,8 +17,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -28,7 +31,7 @@
        "       [22.  ,  5.  ,  6.75, -4.  ]])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,8 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -61,8 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -70,7 +77,7 @@
        "array([1, 1, 0, 0], dtype=int32)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,8 +89,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#kmeans.predict(fill in with our own 7 unit vector data), will classify it into cluster"
@@ -91,8 +100,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Node:\n",
@@ -108,26 +119,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -195,7 +195,7 @@
        "6  wert        3           1"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,8 +212,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -227,7 +229,7 @@
        " 6: ['wert', 3, 1]}"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,8 +245,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "node_objects = [] #list of nodes for the Markov chain\n",
@@ -262,8 +266,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "KeyError",
@@ -272,7 +278,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-69-a43177eaa2d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0ms_expression_outer\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mouter_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ms_exp\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0ms_expression_inner\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minner_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ms_exp\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m                 \u001b[0;32mif\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_outer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_inner\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_inner\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_outer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m                     \u001b[0mouter_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m                     \u001b[0mouter_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcpt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0minner_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnode_num\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-17-8408356aa68e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m                 \u001b[0;31m#print(s_expression_outer)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m                 \u001b[0;31m#print(s_exp_dict)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m                 \u001b[0;32mif\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_outer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_inner\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_inner\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_outer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m                     \u001b[0mouter_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m                     \u001b[0mouter_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcpt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0minner_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnode_num\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyError\u001b[0m: 17.0"
      ]
     }
@@ -285,7 +291,9 @@
     "        #if (outer_node != inner_node):\n",
     "        for s_expression_outer in outer_node.s_exp:\n",
     "            for s_expression_inner in inner_node.s_exp:\n",
-    "                if s_exp_dict[s_expression_outer][1] == s_exp_dict[s_expression_inner][1] and s_exp_dict[s_expression_inner][2] - s_exp_dict[s_expression_outer][2] == 1:\n",
+    "                #print(s_expression_outer)\n",
+    "                #print(s_exp_dict)\n",
+    "                if s_exp_dict[s_expression_outer][1] == s_exp_dict[s_expression_inner][1] and (s_exp_dict[s_expression_inner][2] - s_exp_dict[s_expression_outer][2] == 1):\n",
     "                    outer_node.count += 1\n",
     "                    outer_node.cpt[inner_node.node_num] += 1\n",
     "    #creates the probability of going to the next node, not s-exp\n",
@@ -294,27 +302,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def weighted_random_by_dct(dct):\n",
-    "   rand_val = random.random()\n",
+    "   rand_val = random.random() #random value between 0 and 1\n",
     "   total = 0\n",
     "   for k, v in dct.items():\n",
     "       total += v\n",
-    "       if rand_val <= total:\n",
+    "       if rand_val <= total: #if running total exceeds probability, that's what you want\n",
     "           return k"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "#takes in a number and returns list of s-exp ids generated by the cpt ordering given by probabilities\n",
+    "#cpt jumps from s-exp to s-exp\n",
+    "#nodes are collection of s-exp (s-exp is 1 measure with all those features)\n",
     "def s_expressions(n): #n is length of \n",
-    "    s_expressions = [] #create empty list\n",
+    "    s_exp_ids = [] #create empty list\n",
     "    start = int(random.uniform(0, len(node_objects))) #random start node\n",
     "    next_node = node_objects[start] #get that node\n",
     "    for i in range(n):\n",
@@ -322,30 +337,38 @@
     "        print(next_node_num)\n",
     "        next_node = node_objects[next_node_num] #set the next node variable to that node\n",
     "        next_s_exp_id = random.choice(next_node.s_exp) #get a random s-expression in that node \n",
-    "        s_expressions += [next_s_exp_id] #store id in the list\n",
-    "    return s_expressions"
+    "        s_exp_ids += [next_s_exp_id] #store id in the list\n",
+    "    return s_exp_ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-71-e377b9b1f352>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-71-e377b9b1f352>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def produce_notes():\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
-    "def produce_notes(num_of_measures, list_of_chords):\n",
-    "    s_expressions = s_expressions(num_of_measures)\n",
-    "    for i in range(num_of_measures):\n",
-    "        s_expression = s_exp_dict[s_expressions[0]][0]\n",
-    "        possible_notes = possible_notes(list_of_chords[0], s_expression"
+    "#go from s-exp to producing actual notes by calling possible_notes which passes into select_note\n",
+    "def produce_notes(num_of_measures, list_of_chords): #length of chords list = num of measures\n",
+    "    notes_df = pd.DataFrame(columns=[\"note\", \"start_time\", \"duration\"])\n",
+    "    s_exp_ids = s_expressions(num_of_measures)\n",
+    "    for i in range(num_of_measures): #i refers to measure number\n",
+    "        s_exp = s_exp_dict[s_exp_ids[i]][0] #ith s-exp, which is a string\n",
+    "        split_list = s_exp.split(\" \")\n",
+    "        curr_note = \"Bb4\" #figure out how to start the curr_note initially\n",
+    "        min_slope = split_list[0]\n",
+    "        max_slope = split_list[1]\n",
+    "        for j in range(2, len(split_list)):\n",
+    "            category = split_list[j].split(\"|\")[0]\n",
+    "            start = split_list[j].split(\"|\")[1]\n",
+    "            duration = split_list[j].split(\"|\")[2]\n",
+    "            #possible_notes is looking at which other notes match note and category\n",
+    "            poss_notes_list = possible_notes(list_of_chords[i], category)\n",
+    "            selected_note = select_note(poss_notes_list, curr_note, min_slope, max_slope)\n",
+    "            notes_df.loc[j-2] = [selected_note, start+i, duration]\n",
+    "            curr_note = selected_note\n",
+    "notes_df"
    ]
   }
  ],
@@ -365,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
