--- a/note_slopes.ipynb
+++ b/note_slopes.ipynb
@@ -90,8 +90,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def slope_process(notes):\n",
@@ -177,7 +179,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#TESTS\n",
@@ -202,8 +206,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def consonance(s_exp):\n",
@@ -268,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -280,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -298,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -317,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -351,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +366,7 @@
        "1"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +387,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features.to_csv('test_files/s_exp_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -405,94 +420,67 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
+       "      <th>exp</th>\n",
+       "      <th>song_id</th>\n",
+       "      <th>song_index</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.125000</td>\n",
-       "      <td>0.584635</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0415</td>\n",
+       "      <td>0 4 C|0.155|0.125 H|0.725|0.290</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.678385</td>\n",
-       "      <td>-0.678385</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.4068</td>\n",
+       "      <td>0 0 H|0.340|0.678</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.036458</td>\n",
-       "      <td>-11.315104</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.5536</td>\n",
+       "      <td>-3 0 R|0.174|0.036 R|0.164|0.255 R|0.195|0.443...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.003906</td>\n",
-       "      <td>-2.003906</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0004</td>\n",
+       "      <td>0 0 R|0.243|0.004</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.170573</td>\n",
-       "      <td>-31.157552</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.5620</td>\n",
+       "      <td>-3 7 C|0.073|0.171 C|0.130|0.263 C|0.185|0.408...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     0         1          2    3    4       5\n",
-       "0  2.0  0.125000   0.584635  4.0  0.0  0.0415\n",
-       "1  1.0  0.678385  -0.678385  0.0  0.0  0.4068\n",
-       "2  5.0  0.036458 -11.315104  1.5  1.0  1.5536\n",
-       "3  1.0  0.003906  -2.003906  0.0  0.0  0.0004\n",
-       "4  7.0  0.170573 -31.157552  4.0  2.0  1.5620"
+       "                                                 exp song_id song_index\n",
+       "0                   0 4 C|0.155|0.125 H|0.725|0.290        0          0\n",
+       "1                                 0 0 H|0.340|0.678        0          1\n",
+       "2  -3 0 R|0.174|0.036 R|0.164|0.255 R|0.195|0.443...       0          2\n",
+       "3                                 0 0 R|0.243|0.004        0          3\n",
+       "4  -3 7 C|0.073|0.171 C|0.130|0.263 C|0.185|0.408...       0          4"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "features.to_csv('test_files/s_exp_')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "s_exp.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
