removed use of dictionary, just index into df. removed count attribute from node

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -116,8 +116,7 @@
    "source": [
     "#get data from grammar's csv file of a single type format\n",
     "s_exp_features = pd.read_csv(\"test_files/s_exp_features_test.csv\", index_col = 0)\n",
-    "s_exp_features.head()\n",
-    "#at what index is the s-expression id in this? once we know this, we can add the s-expression id to each node's lsit of s-expressions"
+    "s_exp_features.head()"
    ]
   },
   {
@@ -147,12 +146,12 @@
     {
      "data": {
       "text/plain": [
-       "array([10, 10, 17, 10,  0, 17, 17,  0, 12, 17,  6, 12, 17,  0, 12,  0, 11,\n",
-       "       19,  0, 12, 20, 11, 19,  6,  4,  4, 18, 19,  8, 20,  0, 19,  2,  0,\n",
-       "        4, 18, 11, 20,  2, 21,  0, 18, 14, 19, 14, 12,  2, 13, 11, 12, 11,\n",
-       "        1,  9,  9, 14,  9, 20,  5,  5,  8,  1,  1,  4, 18, 16,  6,  5, 13,\n",
-       "        6, 15, 14, 14,  3, 22, 14,  2,  6, 16,  2,  6,  1, 18, 11, 18, 15,\n",
-       "       15, 15,  9,  9,  9, 19,  7])"
+       "array([ 6,  6,  6,  6,  9,  9,  9,  9, 17,  9,  0, 17,  9, 21, 17,  9, 18,\n",
+       "       14, 21, 17, 19, 18, 14,  0,  8,  8,  7, 14,  3,  8,  9, 14, 12,  9,\n",
+       "       13,  7, 13, 19, 12, 15, 21,  7, 15, 14, 12, 21, 12, 16, 13, 17, 18,\n",
+       "        5,  1,  1, 12,  1, 19, 20, 20,  3,  5,  5,  8,  7, 11,  0, 20, 16,\n",
+       "        0, 20, 15, 15,  4, 22, 12, 12,  0, 11, 12,  0,  5,  7, 18,  7,  2,\n",
+       "        2,  2,  1,  1,  1, 14, 10])"
       ]
      },
      "execution_count": 4,
@@ -189,7 +188,6 @@
     "        self.node_num = node_num\n",
     "        self.s_exp = [] #list of s-exp-ids\n",
     "        self.cpt = {} #maps from node_num to conditional probability\n",
-    "        self.count = 0\n",
     "    \n",
     "    def add_exp(self, s):\n",
     "        self.s_exp.append(s)"
@@ -276,11 +274,7 @@
     }
    ],
    "source": [
-    "#dictionary that maps s-exp-id to: s-exp, song-id (which song), song-index (position in song)\n",
-    "s_exp_dict = {} \n",
-    "\n",
     "#assume s_exp_labels is grammar output with 3 columns: s-exp, song-id, song-index\n",
-    "#s_exp_labels = np.loadtxt(open(\"test_files/test_exp.csv\", \"r\"), dtype=\"str\", delimiter=\",\", skiprows=1)\n",
     "s_exp_labels = pd.read_csv('test_files/s_exp_test.csv', index_col=0)\n",
     "s_exp_labels.head()"
    ]
@@ -302,15 +296,7 @@
     }
    ],
    "source": [
-    "# for expression in s_exp_labels:\n",
-    "#     s_exp_dict[expression[0]] = [expression[1], expression[2], expression[3]]\n",
-    "for index, row in s_exp_labels.iterrows():\n",
-    "    s_exp_dict[index] = [row['exp'], row['song_id'], row['song_index']]\n",
-    "\n",
-    "len(s_exp_dict)\n",
-    "\n",
     "# don't really need a dictionary, can just index into the DataFrame like:\n",
-    "\n",
     "s_exp_labels.loc[4, 'exp']"
    ]
   },
@@ -323,44 +309,37 @@
    "outputs": [],
    "source": [
     "node_objects = [Node(i) for i in range(k_size)] #list of nodes for the Markov chain\n",
-    "\n",
-    "# for cluster_num in range(k_size):\n",
-    "#     node_objects.append(Node(cluster_num)) #initialize 1 node for each cluster number\n",
     "    \n",
     "for i, label in enumerate(kmeans.labels_): #iterating through all the data points\n",
     "    cluster_num = kmeans.labels_[i] #access the cluster num each data point corresponds to\n",
-    "    #adding s-exp, song-id (which song), song-index (position in song) to the node object\n",
-    "    node_objects[label].add_exp(i)#cluster_info[i][0]) #why string??? (previously)\n",
-    "    # find how to add the s-expression id correspondng to that node\n",
-    "    # index 0 is s-expression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#create cpt\n",
-    "for outer_node in node_objects:\n",
-    "    outer_node.count = 0\n",
-    "    for inner_node in node_objects:\n",
-    "        outer_node.cpt[inner_node.node_num] = 0.0\n",
-    "        #if (outer_node != inner_node):\n",
-    "        for s_exp_outer in outer_node.s_exp:\n",
-    "            for s_exp_inner in inner_node.s_exp:\n",
-    "                if s_exp_labels.loc[s_exp_outer, 'song_id'] == s_exp_labels.loc[s_exp_inner, 'song_id']:\n",
-    "                    if s_exp_labels.loc[s_exp_inner, 'song_index'] - s_exp_labels.loc[s_exp_outer, 'song_index'] == 1:\n",
-    "                        outer_node.count += 1\n",
-    "                        outer_node.cpt[inner_node.node_num] += 1\n",
-    "    #creates the probability of going to the next node, not s-exp\n",
-    "    if outer_node.count:\n",
-    "        outer_node.cpt = {k: (v / outer_node.count) for k, v in outer_node.cpt.items()}"
+    "    node_objects[label].add_exp(i)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create cpt\n",
+    "for outer_node in node_objects:\n",
+    "    outer_node_count = 0\n",
+    "    for inner_node in node_objects:\n",
+    "        outer_node.cpt[inner_node.node_num] = 0.0\n",
+    "        for s_exp_outer in outer_node.s_exp:\n",
+    "            for s_exp_inner in inner_node.s_exp:\n",
+    "                if s_exp_labels.loc[s_exp_outer, 'song_id'] == s_exp_labels.loc[s_exp_inner, 'song_id']:\n",
+    "                    if s_exp_labels.loc[s_exp_inner, 'song_index'] - s_exp_labels.loc[s_exp_outer, 'song_index'] == 1:\n",
+    "                        outer_node_count += 1\n",
+    "                        outer_node.cpt[inner_node.node_num] += 1\n",
+    "    #creates the probability of going to the next node, not s-exp\n",
+    "    if outer_node_count:\n",
+    "        outer_node.cpt = {k: (v / outer_node_count) for k, v in outer_node.cpt.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -377,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -386,7 +365,7 @@
     "#takes in a number and returns list of s-exp ids generated by the cpt ordering given by probabilities\n",
     "#cpt jumps from s-exp to s-exp\n",
     "#nodes are collection of s-exp (s-exp is 1 measure with all those features)\n",
-    "def s_expressions(n): #n is length of \n",
+    "def sequence_s_expressions(n): #n is length of \n",
     "    s_exp_ids = [] #create empty list\n",
     "    start = int(random.uniform(0, len(node_objects))) #random start node\n",
     "    next_node = node_objects[start] #get that node\n",
@@ -400,31 +379,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "#dummy placeholder functions\n",
     "possible_notes = lambda a, b : ['G']\n",
     "select_note = lambda a, b, c, d: 'C'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n",
-      "{0: 0.0, 1: 0.0, 2: 0.0, 3: 0.0, 4: 0.0, 5: 0.0, 6: 0.0, 7: 0.0, 8: 0.0, 9: 0.3333333333333333, 10: 0.0, 11: 0.0, 12: 0.0, 13: 0.0, 14: 0.3333333333333333, 15: 0.3333333333333333, 16: 0.0, 17: 0.0, 18: 0.0, 19: 0.0, 20: 0.0, 21: 0.0, 22: 0.0}\n",
-      "9\n",
-      "{0: 0.0, 1: 0.0, 2: 0.0, 3: 0.0, 4: 0.0, 5: 0.0, 6: 0.0, 7: 0.0, 8: 0.0, 9: 0.5, 10: 0.0, 11: 0.0, 12: 0.0, 13: 0.0, 14: 0.16666666666666666, 15: 0.0, 16: 0.0, 17: 0.0, 18: 0.0, 19: 0.16666666666666666, 20: 0.16666666666666666, 21: 0.0, 22: 0.0}\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -455,50 +425,38 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>C</td>\n",
-       "      <td>0.137</td>\n",
-       "      <td>0.090</td>\n",
+       "      <td>0.095</td>\n",
+       "      <td>0.121</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>C</td>\n",
-       "      <td>0.224</td>\n",
-       "      <td>0.232</td>\n",
+       "      <td>0.434</td>\n",
+       "      <td>0.311</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>C</td>\n",
-       "      <td>0.154</td>\n",
-       "      <td>0.746</td>\n",
+       "      <td>0.134</td>\n",
+       "      <td>0.767</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>C</td>\n",
-       "      <td>1.057</td>\n",
-       "      <td>0.129</td>\n",
+       "      <td>1.158</td>\n",
+       "      <td>0.341</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>C</td>\n",
-       "      <td>1.152</td>\n",
-       "      <td>0.197</td>\n",
+       "      <td>1.225</td>\n",
+       "      <td>0.516</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>C</td>\n",
-       "      <td>1.064</td>\n",
-       "      <td>0.349</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>C</td>\n",
-       "      <td>1.238</td>\n",
-       "      <td>0.423</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>C</td>\n",
-       "      <td>1.264</td>\n",
-       "      <td>0.710</td>\n",
+       "      <td>1.254</td>\n",
+       "      <td>0.773</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -506,17 +464,15 @@
       ],
       "text/plain": [
        "  note_name  start_time duration\n",
-       "0         C       0.137    0.090\n",
-       "1         C       0.224    0.232\n",
-       "2         C       0.154    0.746\n",
-       "3         C       1.057    0.129\n",
-       "4         C       1.152    0.197\n",
-       "5         C       1.064    0.349\n",
-       "6         C       1.238    0.423\n",
-       "7         C       1.264    0.710"
+       "0         C       0.095    0.121\n",
+       "1         C       0.434    0.311\n",
+       "2         C       0.134    0.767\n",
+       "3         C       1.158    0.341\n",
+       "4         C       1.225    0.516\n",
+       "5         C       1.254    0.773"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +481,7 @@
     "#go from s-exp to producing actual notes by calling possible_notes which passes into select_note\n",
     "def produce_notes(num_of_measures, list_of_chords): #length of chords list = num of measures\n",
     "    notes_df = pd.DataFrame(columns=[\"note_name\", \"start_time\", \"duration\"])\n",
-    "    s_exp_ids = s_expressions(num_of_measures)\n",
+    "    s_exp_ids = sequence_s_expressions(num_of_measures)\n",
     "    curr_note = \"Bb4\" #figure out how to start the curr_note initially\n",
     "    row = 0\n",
     "    for i in range(num_of_measures): #i refers to measure number\n",
